meds changes around organisation