@@ -5,18 +5,24 @@ import net.trollheim.security.ctf.dto.*;
 import net.trollheim.security.ctf.dto.specifications.FlagSpec;
 import net.trollheim.security.ctf.model.AppUser;
 import net.trollheim.security.ctf.model.Flag;
+import net.trollheim.security.ctf.model.GrantedAuthorities;
+import net.trollheim.security.ctf.model.InviteCode;
 import net.trollheim.security.ctf.repository.AppUserRepository;
 import net.trollheim.security.ctf.repository.FlagRepository;
 import net.trollheim.security.ctf.repository.InviteCodeRepository;
+import org.springframework.data.domain.Sort;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
+import javax.transaction.Transactional;
+import java.time.LocalTime;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Function;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Service
 public class FlagService {
@@ -25,7 +31,7 @@ public class FlagService {
     private final AppUserRepository appUserRepository;
     private final InviteCodeRepository inviteCodeRepository;
 
-    private final Function<Flag, FlagDetailsDto> flagConverter = flag -> new FlagDetailsDto(flag.getNumber(), flag.getTitle(), flag.getDescription(),
+    private final Function<Flag, FlagDetailsDto> flagConverter = flag -> new FlagDetailsDto(flag.getId(), flag.getTitle(), flag.getDescription(),
             flag.getUrl(), flag.getSubmissions().stream().filter(s -> s.getAppUser().getId().equals(((AppUser) SecurityContextHolder.getContext().getAuthentication().getPrincipal()).getId())).findAny().isPresent());
 
 
@@ -35,7 +41,7 @@ public class FlagService {
         this.inviteCodeRepository = inviteCodeRepository;
     }
 
-
+    @Deprecated
     public Flag createFlag(FlagDto flagDto) {
         Flag flag = new Flag();
         flag.setCode(flagDto.getCode());
@@ -75,22 +81,22 @@ public class FlagService {
 
     public RankDto getRanks() {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        System.out.println(authentication.getPrincipal());
+
         AppUser user = (AppUser) authentication.getPrincipal();
+        user = appUserRepository.findById(user.getId()).orElseThrow(() -> new RuntimeException());
 
-
-        List<ScoreDto.Flag> flags = appUserRepository.findById(user.getId()).get().getSubmissions().stream().map(s -> new ScoreDto.Flag(s.getFlag().getTitle(), 1)).collect(Collectors.toList());
+        List<ScoreDto.Flag> flags = user.getSubmissions().stream().map(s -> new ScoreDto.Flag(s.getFlag().getTitle(), 1)).collect(Collectors.toList());
         RankDto rankDto = new RankDto();
-        rankDto.setPlayer(appUserRepository.findById(user.getId()).get().getSubmissions().size());
+        rankDto.setPlayer( user.getSubmissions().size());
 
-        rankDto.setTop(appUserRepository.findTopPlayers());
+        rankDto.setTop(appUserRepository.findTopPlayers(user.getOrganisation().getId()));
 
         return rankDto;
     }
 
 
-    public FlagDetailsDto getFlagDetails(int number) {
-        Optional<Flag> flagOptional = flagRepository.findByNumber(number);
+    public FlagDetailsDto getFlagDetails(long id) {
+        Optional<Flag> flagOptional = flagRepository.findById(id);
         //TODO check is flag active
         return flagOptional.map(flagConverter).orElseThrow(() -> new RuntimeException("Not found"));
     }
@@ -98,7 +104,37 @@ public class FlagService {
     public List<InviteCodeDto> getInvites() {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
         AppUser user = (AppUser) authentication.getPrincipal();
+        final Stream<InviteCode> stream;
+        if (user.getAuthorities().contains(GrantedAuthorities.APP_ADMIN)){
+            stream = inviteCodeRepository.findAll().stream();
+        } else {
+            stream = inviteCodeRepository.findByOwnerId(user.getOrganisation().getId()).stream();
+        }
 
-        return inviteCodeRepository.findByOwnerId(user.getId()).stream().map(code -> new InviteCodeDto(code.getInviteCode(), code.isActive())).collect(Collectors.toList());
+        //if admin - get all codes
+        //if org admin get roles only gor org
+
+
+
+        return  stream.map(code -> new InviteCodeDto(code.getInviteCode(), code.getOwner().getName(), code.isActive())).collect(Collectors.toList());
+    }
+
+    @Transactional
+    public List<FlagAdminDetailsDto> getAdminFlagsDetails() {
+        List<Flag> flags = flagRepository.findAll();
+        List<FlagAdminDetailsDto> list = flags.stream().map(FlagAdminDetailsDto::fromFlag).toList();
+        return list;
+    }
+
+
+    public void createFlag(NewFlagDto newFlagDto) {
+        Flag flag = new Flag();
+        flag.setCode(newFlagDto.code());
+        flag.setDescription(newFlagDto.description());
+        flag.setTitle(newFlagDto.title());
+        flag.setUrl(newFlagDto.url());
+        flag.setStartDate(newFlagDto.startDate().asLocalDate().atTime(LocalTime.MIN));
+        flag.setEndDate(newFlagDto.endDate().asLocalDate().atTime(LocalTime.MAX));
+        flagRepository.save(flag);
     }
 }
